--- a/alphaheavy-quickfix.cabal
+++ b/alphaheavy-quickfix.cabal
@@ -9,22 +9,21 @@ Cabal-version:       >= 1.10
 Library
   Default-Language:  Haskell2010
   Build-depends:     base,
-                     aeson,
                      bytestring >= 0.9,
                      conduit,
                      containers,
                      Decimal,
-                     ghc-prim,
                      mtl,
                      old-locale,
                      lens,
                      resourcet,
                      stm,
-                     text >= 0.11,
                      time,
                      type-level
 
   Exposed-modules:   AlphaHeavy.FIX
+                     AlphaHeavy.FIX.FIX42.Factory
+                     AlphaHeavy.FIX.FIX42.Types
                      AlphaHeavy.QuickFIX
 
   Other-modules:     AlphaHeavy.QuickFIX.Foreign
