Switch to TypeLits for GHC-7.8

--- a/alphaheavy-quickfix.cabal
+++ b/alphaheavy-quickfix.cabal
@@ -8,7 +8,7 @@ Cabal-version:       >= 1.10
 
 Library
   Default-Language:  Haskell2010
-  Build-depends:     base,
+  Build-depends:     base >= 4.7,
                      bytestring >= 0.9,
                      conduit,
                      containers,
@@ -18,8 +18,7 @@ Library
                      lens,
                      resourcet,
                      stm,
-                     time,
-                     type-level
+                     time
 
   Exposed-modules:   AlphaHeavy.FIX
                      AlphaHeavy.FIX.FIX42.Factory
