--- a/alphaheavy-quickfix.cabal
+++ b/alphaheavy-quickfix.cabal
@@ -10,7 +10,7 @@ Library
   Default-Language:  Haskell2010
   Build-depends:     base >= 4.7,
                      bytestring >= 0.9,
-                     conduit,
+                     conduit > 1.0,
                      containers,
                      Decimal,
                      mtl,
